Fix iOS equal button alignment

--- a/app/styles/utils/_config.scss
+++ b/app/styles/utils/_config.scss
@@ -485,6 +485,11 @@ $button-styles: (
       box-shadow: none,
     ),
     after: (
+      position: absolute,
+      bottom: 0,
+      left: 0,
+      right: 0,
+      width: 100%,
       background-color: _color(primary, 600),
       height: 4px,
     ),
